- fix overflow

--- a/src/components/Layout/Page/Page.module.scss
+++ b/src/components/Layout/Page/Page.module.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100%;
   padding-bottom: 100px;
+  overflow: hidden;
 }
 
 .page__navigationPush {
